k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: assessment
  namespace: assessment
  labels:
    app.kubernetes.io/name: assessment
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: assessment
